[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "behave-kit"
version = "1.3.0"
description = "The Swiss-army knife for Behave — soft assertions, typed context, conditional skip, env management, fixtures and more."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
authors = [{ name = "Mathias Paulenko", email = "mathias.paulenko@gmail.com" }]
keywords = ["behave", "bdd", "testing", "assertions", "fixtures", "context", "environment"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Testing :: BDD",
    "Typing :: Typed",
]
dependencies = [
    "behave>=1.2.6",
]

[project.optional-dependencies]
yaml = ["pyyaml>=6.0"]
excel = ["openpyxl>=3.1"]
dotenv = ["python-dotenv>=1.0"]
docs = [
    "sphinx>=7.0",
    "furo>=2024.0",
    "myst-parser>=3.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/MathiasPaulenko/behave-kit"
Documentation = "https://mathiaspaulenko.github.io/behave-kit"
Repository = "https://github.com/MathiasPaulenko/behave-kit"
Issues = "https://github.com/MathiasPaulenko/behave-kit/issues"
Changelog = "https://github.com/MathiasPaulenko/behave-kit/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["behave_kit"]

[tool.hatch.build.targets.wheel.force-include]
"behave_kit/py.typed" = "behave_kit/py.typed"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["behave_kit"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["behave_kit"]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.mypy]
strict = true
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ["^tests/integration/"]
